show horizontal scrollbar on issue boards in focus mode

--- a/app/assets/stylesheets/pages/boards.scss
+++ b/app/assets/stylesheets/pages/boards.scss
@@ -78,7 +78,7 @@
     z-index: 9000;
 
     .boards-list {
-      height: calc(100vh - 50px);
+      height: calc(100vh - 70px);
     }
   }
 }
